Created basic layout for sections of webpage

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <div id="container">
         <div id="sidebar">
-
+            <div>sidebar</div>
         </div>
         <div id="header">
-
+            <div>header</div>
         </div>
         <div id="main-content">
-            
+            <div>main</div>
         </div>
     </div>
 </body>
