Final commit, basic webpage with icons using Grid

--- a/index.html
+++ b/index.html
@@ -166,17 +166,50 @@
                 </div>
             </div>
             <div id="rightSec">
-                <div id="announcement">Announcements</div>
+                <div id="announcement"><h4>Announcements</h4></div>
                 <div id="siteAnnounce">
-                    <div class="news"><h4>Site</h4></div>
-                    <div class="news"><h4>Community</h4></div>
-                    <div class="news"><h4>Updated</h4></div>
+                    <div class="news">
+                        <h4>Site</h4>
+                        <p>Some words aboutt he site go here but just text really</p>
+                    </div>
+                    <div class="news">
+                        <h4>Community</h4>
+                        <p>more words aboutt he community and what not, filler text mostly</p>
+                    </div>
+                    <div class="news">
+                        <h4>Updated</h4>
+                        <p>you guess it, more words</p>
+                    </div>
                 </div>
-                <div id="trending">Trending</div>
+                <div id="trending"><h4>Trending</h4></div>
                 <div id="trends">
-                    <div class="trend">@tegan</div>
-                    <div class="trend">@morgan</div>
-                    <div class="trend">@alex</div>
+                    <div class="trend">
+                        <div class="trendInfo">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>pac-man</title><path d="M12,12L19.07,19.07C15.17,23 8.83,23 4.93,19.07C1,15.17 1,8.84 4.93,4.93C8.83,1 15.16,1 19.07,4.93L12,12M19,10A2,2 0 0,0 17,12A2,2 0 0,0 19,14A2,2 0 0,0 21,12A2,2 0 0,0 19,10Z" /></svg>
+                        </div>
+                        <div class="trendInfo"><strong>@tegan</strong></div>
+                        <div class="trendInfo">
+                            <p>this guy is a sweet guy</p>
+                        </div>
+                    </div>
+                    <div class="trend">
+                        <div class="trendInfo">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>face-woman-shimmer</title><path d="M19.5 1L18.41 3.41L16 4.5L18.41 5.59L19.5 8L20.6 5.59L23 4.5L20.6 3.41L19.5 1M12 2C6.5 2 2 6.5 2 12V22H22V12C22 10.53 21.67 9.13 21.1 7.87L19.86 10.59C19.94 11.05 20 11.5 20 12C20 16.43 16.43 20 12 20C7.57 20 4 16.43 4 12C4 11.96 4 11.91 4 11.87A10 10 0 0 0 9.74 6.31A10 10 0 0 0 17.5 10A10 10 0 0 0 18.83 9.91L17.35 6.65L12.6 4.5L16.13 2.9C14.87 2.33 13.47 2 12 2M9 11.75A1.25 1.25 0 0 0 7.75 13A1.25 1.25 0 0 0 9 14.25A1.25 1.25 0 0 0 10.25 13A1.25 1.25 0 0 0 9 11.75M15 11.75A1.25 1.25 0 0 0 13.75 13A1.25 1.25 0 0 0 15 14.25A1.25 1.25 0 0 0 16.25 13A1.25 1.25 0 0 0 15 11.75Z" /></svg>
+                        </div>
+                        <div class="trendInfo"><strong>@morgan</strong></div>
+                        <div class="trendInfo">
+                            <p>this gal is shiny</p>
+                        </div>
+                    </div>
+                    <div class="trend">
+                        <div class="trendInfo">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>heart-broken-outline</title><path d="M7.5,5C7.7,5 7.9,5 8.1,5.1L10.5,9.2L6.8,13.8C5.1,11.8 4,10.2 4,8.5C4,6.5 5.5,5 7.5,5M7.5,3C4.4,3 2,5.4 2,8.5C2,12.3 5.4,15.4 10.6,20L12,21.3L9,14.3L13,9.3L9.4,3.3C8.8,3.1 8.2,3 7.5,3M16.5,5C18.5,5 20,6.5 20,8.5C20,11.1 17.4,13.7 13.4,17.3L13.1,15L17.9,9.7L15.6,5.2C15.9,5 16.2,5 16.5,5M16.5,3C15.2,3 13.9,3.5 12.9,4.3L15.5,9.4L11,14.4L12,21.4L13.4,20.1C18.6,15.4 22,12.3 22,8.6C22,5.4 19.6,3 16.5,3Z" /></svg>
+                        </div>
+                        <div class="trendInfo"><strong>@alex</strong></div>
+                        <div class="trendInfo">
+                            <p>he's a heart breaker</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
